2012-10-25  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-int.h (lra_assert): Redefine it gcc_checking_assert.
	* lra-constraints.c (check_and_process_move): Remove #if
	ENABLE_ASSERT_CHECKING.

2012-10-26  Ralf Corsépius  <ralf.corsepius@rtems.org>

	* config/avr/rtems.h (TARGET_OS_CPP_BUILTINS): Remove
	__USE_INIT_FINI__.
	* config/avr/t-rtems (LIB1ASMFUNCS): Filter out _exit.

2012-10-25  David S. Miller  <davem@davemloft.net>

	* config/sparc/constraints.md ("U"): Delete.
	* config/sparc/sparc.md: Use 'r' constraint instead of 'U'.
	* config/sparc/sync.md: Likewise.

2012-10-25  Lawrence Crowl  <crowl@google.com>

	* hash-table.h: Add usage documentation.
	(template struct typed_free_remove): Clarify documentation.
	Rename template parameter.
	(struct typed_noop_remove): Likewise.
	(descriptor concept): Change typedef T to value_type.
	Add typedef compare_type.  Use more precise template parameter name,
	Descriptor instead of Descr.  Update users to match.
	(struct hash_table): Change 'find' parameters to use compare_type
	instead of the value type.

2012-10-25  Jan Hubicka  <jh@suse.cz>

	* ipa-cp.c (ipcp_discover_new_direct_edges): If something was turned
	to direct call update the summary.
	* ipa-inline-transform.c (inline_call): Sanity check that summaries
	match the predicted effect; fix updating of summary after edge
	redirection.
	* ipa-inline-analysis.c (inline_node_duplication_hook): Do not try
	to update the summary and recompute it instead.
	(estimate_function_body_sizes): Fix self size estimation; double
	check that it agrees with inline_update_overall_summary.
	(estimate_edge_size_and_time): Handle devirtualizaiton costs.
	(estimate_edge_devirt_benefit): Update to be called from
	estimate_edge_size_and_time.
	(estimate_calls_size_and_time): Update.
	(estimate_node_size_and_time): Watch overflows.
	(inline_merge_summary): Likewise.
	* ipa-prob.c: Include ipa-inline.h
	(ipa_make_edge_direct_to_target): After redirection update the summary.
