@@ -1,3 +1,8 @@
+2012-10-26  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* lra-constraints.c (process_address): Describe the kinds of address
+	that we might see.
+
 2012-10-25  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* lra-int.h (lra_assert): Redefine it gcc_checking_assert.
